# AskMe

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/docx/: noidung.docx
data/evals/: qa_examples.sample.json
scripts/: chat.py  debug_retrieval.py  evaluate.py  ingest.py  reset_db.py
src/askme/: __init__.py  config.py  document_loaders.py  embeddings.py  graph.py  llm.py  prompts.py  reranker.py  schemas.py  vectorstore.py
src/askme_rag.egg-info/: PKG-INFO  SOURCES.txt
