[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "askme-rag"
version = "0.1.0"
description = "RAG question answering app with LangChain, LangGraph, LangSmith, Hugging Face, and Qdrant."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
